--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://alrieq.github.io/my-app",
   "name": "test",
   "private": true,
   "version": "0.0.0",
@@ -7,8 +8,11 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
+    
+      
   },
   "dependencies": {
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
