--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+         "predeploy": "npm run build",
+         "deploy": "gh-pages -d build",
+          "start": "react-scripts start",
+          "build": "react-scripts build",
+          "test": "react-scripts test",
+          "eject": "react-scripts eject"
+      
+
     
       
   },
